@@ -32,9 +32,9 @@ The ivy settings file that we will use is very simple here. It defines two resol
 
 <code type="xml">
 <ivysettings>
-	<settings	defaultCache="${ivy.cache.dir}/no-namespace"	
-			defaultResolver="libraries"
+	<settings	defaultResolver="libraries"
 			defaultConflictManager="all" />		<!-- in order to get all revisions without any eviction -->
+	<caches defaultCacheDir="${ivy.cache.dir}/no-namespace" />
 	<resolvers>
 		<ibiblio name="libraries" m2compatible="true" />
   		<filesystem name="my-repository">
